--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Fran-riv02/grupo_2_Dr.music#readme",
   "dependencies": {
+    "axios": "^1.5.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
@@ -32,6 +33,5 @@
     "nodemon": "^2.0.15",
     "sequelize": "^6.12.0-beta.2"
   },
-  "devDependencies": {},
   "description": ""
 }
